src/objects/Lending_App_Application__c.object
<CustomObject>
    <description>Patient information related to applying/inquiring for pre-approval for a loan.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account associated with the application.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lending App Applications</relationshipLabel>
        <relationshipName>Lending_App_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <description>Employment status of applicant.</description>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Self Employed</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Income__c</fullName>
        <description>Annual gross income of applicant.</description>
        <label>Gross Income</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Yearly_Household_Income__c</fullName>
        <label>Gross Yearly Household Income</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Yearly_Individual_Income__c</fullName>
        <label>Gross Yearly Individual Income</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_State__c</fullName>
        <description>List of states to choose from that will be assigned to the BillingState on the user record. BillingState on the User record is a text field which allows a user to input anything. This list ensures the options are limited to actual states.</description>
        <label>Home State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_Expiration_Date__c</fullName>
        <description>Valid identification expiration date for applicant.</description>
        <label>Id Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Id_Issuance_Date__c</fullName>
        <description>Valid identification issuance date for applicant&apos;s valid identification.</description>
        <label>Id Issuance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Id_Number__c</fullName>
        <description>Valid identification number for applicant&apos;s valid identification.</description>
        <label>Id Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_State__c</fullName>
        <description>Name of the state issuing applicant&apos;s valid identification.</description>
        <label>Id State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_Type__c</fullName>
        <label>Id Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Driver&apos;s License</fullName>
                </value>
                <value>
                    <fullName>State ID</fullName>
                </value>
                <value>
                    <fullName>US Passport</fullName>
                </value>
                <value>
                    <fullName>Military ID</fullName>
                </value>
                <value>
                    <fullName>Matricula ID</fullName>
                </value>
                <value>
                    <fullName>PR Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <description>Amount in dollars for which applicant is applying.</description>
        <label>Loan_Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Residence_Payment__c</fullName>
        <description>Amount an applicant spends monthly on mortgage or rent.</description>
        <label>Monthly Residence Payment</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residence_Type__c</fullName>
        <description>Indicates if an applicant rents or owns their residence. None is an acceptable input.</description>
        <label>Residence Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                    <label>Own</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_Password__c</fullName>
        <description>Password that allows a login user access through a &quot;publicly accessible&quot; login page.</description>
        <label>Temp Password</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Lending App Application</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Lending App Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lending App Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>